# gazebo_bluerov2

./: .gitignore  CMakeLists.txt  README.md  build.sh  launch.sh  launch_1x_bluerov2.sh  launch_2x_bluerov2.sh  package.xml
models/Apriltag36_11_00000/: model.sdf
models/bluerov2/: configs.yaml  model.config  model.sdf
models/bluerov2/materials/scripts/: april_tag_1.material
models/bluerov2_2025/: model.sdf
models/bluerov2_2025 port_9002/: model.sdf
models/bluerov2_2025 port_9012/: model.sdf
models/bluerov2_2025_port_9002/: configs.yaml  model.sdf
models/bluerov2_2025_port_9012/: model.sdf
models/bluerov2_2025_port_9012/materials/scripts/: april_tag_1.material
models/bluerov2_9012/: model.sdf
models/bluerov2_9022/: model.sdf
models/pool/: model.sdf
models/pool_map/: model.config  model.dae  model.sdf
plugins/: CMakeLists.txt  PressureSensor.cc  PressureSensor.hh  PressureSensorSystem.cc  PressureSensorSystem.hh
scripts/: ccw.sh  cw.sh  forward.sh  generate_model.py  left.sh  stop.sh  up.sh
src/: CMakeLists.txt  stream_camera.cpp
worlds/: bluerov2_1x.world  bluerov2_2vessels.world  bluerov2_2x.world  bluerov2_camera.world  bluerov2_pool.sdf  bluerov2_pool_1rov.sdf
