<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>gazebo_bluerov2</name>
  <version>0.0.1</version>
  <description>BlueROV2 simulation in Gazebo Garden</description>

  <maintainer email="msis@blksail.ai">Mohamed Saad Ibn Seddik</maintainer>
  <maintainer email="msis@blksail.ai">Vincent Vandyck</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/blksail-edu/gazebo_bluerov2</url>
  <url type="bugtracker">https://github.com/blksail-edu/gazebo_bluerov2/issues</url>

  <author>Mohamed Saad Ibn Seddik</author>
  <author>Vincent Vandyck</author>
  <author>Clyde McQueen</author>
  <author>Marina Nelson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>